PS-10732-fixing flash message visibility

--- a/src/Pyz/Yves/ShopUi/Theme/default/styles/settings/_z-index.scss
+++ b/src/Pyz/Yves/ShopUi/Theme/default/styles/settings/_z-index.scss
@@ -4,3 +4,4 @@ $setting-zi-overlay: 700;
 $setting-zi-dropdown: 1000;
 $setting-zi-substrate: -1;
 $setting-zi-header: 900;
+$setting-zi-notification-area: 950;
